Hide unimplemented function tabs in the action bar

--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
                     </div>
                     <div class="action-bar__right">
                         <div class="function-tabs" id="functionTabs" style="display: none;">
+                            <!-- Hidden: not yet implemented
                             <button class="function-tab" data-fc="05" title="Write Single Coil">05</button>
                             <button class="function-tab" data-fc="06" title="Write Single Register">06</button>
                             <button class="function-tab" data-fc="15" title="Write Multiple Coils">15</button>
                             <button class="function-tab" data-fc="16" title="Write Multiple Registers">16</button>
+                            -->
                             <button class="function-tab function-tab--test" data-fc="TC" title="Test Connection (Ctrl+T)">TC</button>
                         </div>
                     </div>
